--- a/res/styles.css
+++ b/res/styles.css
@@ -133,7 +133,6 @@ body {
   padding-bottom: 40px; }
   .wrapper-content > div {
     color: #333333;
-	background: #F2F1F1;
     margin: 0 auto;
     max-width: 1280px;
     padding-right: 14px;
@@ -162,7 +161,7 @@ body {
 
 .wrapper-header {
   *zoom: 1;
-  background: white; }
+  background: #F2F1F1; }
   .wrapper-header:before, .wrapper-header:after {
     content: "";
     display: table; }
