--- a/_includes/sass/basic.scss
+++ b/_includes/sass/basic.scss
@@ -146,7 +146,8 @@ span[data-note] {
 		font-weight: 700;
 		height: 75px;
 		width: 75px;
-		font-size: 1.5em;
+		#font-size: 1.5em;
+		font-size: 2.5em;
 		border-radius: 75px;
 		display: inline-block;
 		text-align: center;
