--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ body {
   background: #fff;
   font-size: 16px;
   line-height: 1.7em;
-  font-family: Dosis;
+  font-family: DIN-Regular, Dosis;
 }
 a {
   text-decoration: none;
@@ -323,3 +323,15 @@ div.team:first-child {
   }
 }
 /*END FOOTER*/
+@font-face {
+	font-family:'DIN-Regular';
+	src: url('./assets/font/DIN_gdi.eot');
+	src: url('./assets/font/DIN_gdi.eot?#iefix') format('embedded-opentype'),
+		url('./assets/font/DIN_gdi.woff') format('woff'),
+		url('./assets/font/DIN_gdi.ttf') format('truetype'),
+		url('./assets/font/DIN_gdi.svg#DIN-Regular') format('svg');
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
