--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,7 +195,8 @@ ul.menu li a:hover {
   width: 98%;
   margin: 0 auto;
   padding: 100px 50px;
-  background: #fff;
+  #background: #fff;
+   background-image: url("../assets/images/cable.jpg");
   overflow: hidden;
   font-size: 21px;
 }
