--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,7 @@ ul.menu li a:hover {
   margin: 0 auto;
   padding: 100px 50px;
   #background: #fff;
-   background-image: url("../assets/images/cable.jpg");
+   background-image: url("http://rangkaian.net/assets/images/cable.jpg");
   overflow: hidden;
   font-size: 21px;
 }
